Convert most Lombok @Value classes to records, remove some dead code