@@ -21,28 +21,22 @@ import com.datasqrl.planner.parser.StatementParserException;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import lombok.Value;
 import org.apache.calcite.rel.type.RelDataTypeField;
 
-@Value
-public class PlannerHints {
+public record PlannerHints(List<PlannerHint> hints) {
 
   public static final PlannerHints EMPTY = new PlannerHints(List.of());
 
-  List<PlannerHint> hints;
-
   public Optional<ColumnNamesHint> getQueryByHint() {
-    List<PlannerHint> queryby =
-        hints.stream().filter(QueryByHint.class::isInstance).collect(Collectors.toList());
-    if (queryby.size() > 1) {
+    List<PlannerHint> queryBy = hints.stream().filter(QueryByHint.class::isInstance).toList();
+    if (queryBy.size() > 1) {
       throw new StatementParserException(
           ErrorLabel.GENERIC,
-          queryby.get(1).getSource().getFileLocation(),
+          queryBy.get(1).getSource().getFileLocation(),
           "Cannot have more than one `query_by_*` or `no_query` hint per table");
     }
-    return queryby.stream().map(ColumnNamesHint.class::cast).findFirst();
+    return queryBy.stream().map(ColumnNamesHint.class::cast).findFirst();
   }
 
   public boolean isTest() {
@@ -66,10 +60,8 @@ public class PlannerHints {
   }
 
   public static PlannerHints fromHints(SqrlComments comments) {
-    List<PlannerHint> hints =
-        comments.getHints().stream()
-            .map(PlannerHint::from)
-            .collect(Collectors.toUnmodifiableList());
+    List<PlannerHint> hints = comments.getHints().stream().map(PlannerHint::from).toList();
+
     return new PlannerHints(hints);
   }
 }
